--- a/src/app/components/compositeScoreDisplay/CompositeScoreDisplay.module.scss
+++ b/src/app/components/compositeScoreDisplay/CompositeScoreDisplay.module.scss
@@ -1,5 +1,4 @@
 .questionnaire {
-  margin: 12px auto;
   background: #0ea5e9 !important;
   border-color: #0ea5e9 !important;
   
